--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,49 @@
 @import "~bootstrap/dist/css/bootstrap.min.css";
+
+* {
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  font-family: "Montserrat";
+}
+
+.container-domain {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.domain-container {
+  width: 700px;
+  height: 50px;
+  border: solid 2px tomato;
+  margin: 36px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.domain-container p {
+  font-weight: 600;
+  font-size: 24px;
+  margin: 0;
+}
+
+.btn-generator {
+  border: none;
+  background-color: tomato;
+  border-radius: 10px;
+  padding: 16px;
+  color: #fff;
+  font-size: 16px;
+  font-family: "Montserrat";
+  cursor: pointer;
+}
+
+.btn-generator:active {
+  transform: translateY(3px);
+}
