--- a/src/style.css
+++ b/src/style.css
@@ -20,7 +20,7 @@ body {
 .domain-container {
   width: 700px;
   height: 50px;
-  border: solid 2px tomato;
+  border: double 2px orangered;
   margin: 36px;
   display: flex;
   justify-content: center;
@@ -35,7 +35,7 @@ body {
 
 .btn-generator {
   border: none;
-  background-color: tomato;
+  background-color: orangered;
   border-radius: 10px;
   padding: 16px;
   color: #fff;
